--- a/12.android_kw/android_kw.html
+++ b/12.android_kw/android_kw.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu Android KW (Ikon Tanpa Kotak)</title>
+    <title>Menu Android KW (4 Kolom Mobile)</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
@@ -51,8 +51,7 @@
         /* Card Menu Items */
         .menu-card {
             border-radius: 10px; /* Sudut melengkung */
-            /* box-shadow: 0 4px 8px rgba(0,0,0,0.1); <-- Hapus atau ganti ini */
-            box-shadow: none; /* **PENTING: Menghilangkan bayangan sepenuhnya** */
+            box-shadow: none; /* Menghilangkan bayangan sepenuhnya */
             background-color: transparent; /* Membuat latar belakang kartu transparan */
             transition: transform 0.2s ease-in-out;
             height: 150px; /* Tinggi kartu yang konsisten */
@@ -68,7 +67,6 @@
 
         .menu-card:hover {
             transform: translateY(-5px); /* Efek angkat saat hover */
-            /* box-shadow: 0 6px 12px rgba(0,0,0,0.15); <-- Hapus atau ganti ini */
             box-shadow: 0 4px 8px rgba(0,0,0,0.05); /* Sedikit bayangan saat hover agar tetap ada efek */
         }
 
@@ -83,15 +81,42 @@
         }
 
         /* Penyesuaian responsif untuk ukuran layar kecil */
-        @media (max-width: 575.98px) { /* Extra small devices (portrait phones) */
+        /* Pastikan 4 kolom di semua ukuran layar, bahkan yang terkecil */
+        .row.row-cols-4 > .col {
+            flex: 0 0 auto;
+            width: 25%; /* Memastikan setiap kolom mengambil 25% lebar */
+        }
+
+        @media (max-width: 767.98px) { /* Untuk semua perangkat mobile (sm dan xs) */
             .menu-card {
-                height: 120px; /* Kurangi tinggi kartu di layar sangat kecil */
+                height: 100px; /* Lebih kecil di mobile agar 4 kolom pas */
             }
             .menu-card .card-icon {
-                font-size: 2.5rem; /* Kurangi ukuran ikon di layar sangat kecil */
+                font-size: 2rem; /* Ukuran ikon lebih kecil lagi */
             }
             .menu-card .card-title {
-                font-size: 1rem; /* Kurangi ukuran teks di layar sangat kecil */
+                font-size: 0.8rem; /* Ukuran teks lebih kecil lagi */
+            }
+            /* Sesuaikan margin antar kartu jika terlalu rapat */
+            .row.g-4 {
+                --bs-gutter-x: 0.5rem; /* Kurangi jarak horizontal antar kolom */
+                --bs-gutter-y: 0.5rem; /* Kurangi jarak vertikal antar baris */
+            }
+        }
+
+        @media (min-width: 768px) { /* Untuk tablet dan desktop */
+             .menu-card {
+                height: 150px; /* Kembali ke ukuran normal */
+            }
+            .menu-card .card-icon {
+                font-size: 3rem; /* Kembali ke ukuran normal */
+            }
+            .menu-card .card-title {
+                font-size: 1.2rem; /* Kembali ke ukuran normal */
+            }
+            .row.g-4 {
+                --bs-gutter-x: 1.5rem; /* Jarak normal */
+                --bs-gutter-y: 1.5rem; /* Jarak normal */
             }
         }
     </style>
@@ -134,7 +159,7 @@
     </div>
 
     <div class="container mt-4">
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4" id="menu-grid">
+        <div class="row row-cols-4 g-4" id="menu-grid">
             </div>
     </div>
 
@@ -158,6 +183,10 @@
                 { title: 'Settings', icon: 'bi-gear-fill', link: '#' },
                 { title: 'Calculator', icon: 'bi-calculator-fill', link: '#' },
                 { title: 'Downloads', icon: 'bi-download', link: '#' },
+                { title: 'Notes', icon: 'bi-stickies-fill', link: '#' },
+                { title: 'Weather', icon: 'bi-cloud-sun-fill', link: '#' },
+                { title: 'Photos', icon: 'bi-image', link: '#' },
+                { title: 'Contacts', icon: 'bi-person-lines-fill', link: '#' },
                 // Tambahkan lebih banyak menu sesuai kebutuhan
             ];
 
