--- a/12.android_kw/android_kw.html
+++ b/12.android_kw/android_kw.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu Android KW (Full Fitur)</title>
+    <title>Menu Android KW (Tombol Kembali)</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
@@ -127,6 +127,8 @@
             min-height: 400px; /* Tinggi minimum untuk melihat konten */
             box-shadow: 0 2px 4px rgba(0,0,0,0.05);
             transition: background-color 0.3s ease; /* Transisi untuk mode gelap */
+            position: relative; /* Penting untuk penempatan tombol kembali */
+            padding-bottom: 60px; /* Ruang untuk tombol kembali */
         }
 
         body.dark-mode #main-content-area {
@@ -150,6 +152,43 @@
             filter: invert(100%);
         }
 
+        /* Back Button Styling */
+        #back-button {
+            position: absolute;
+            bottom: 20px; /* Jarak dari bawah */
+            left: 20px; /* Jarak dari kiri */
+            background-color: #0d6efd; /* Warna primary Bootstrap */
+            color: white;
+            border: none;
+            border-radius: 50%; /* Bentuk lingkaran */
+            width: 48px; /* Ukuran tombol */
+            height: 48px; /* Ukuran tombol */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 1.5rem;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+            cursor: pointer;
+            transition: background-color 0.2s, transform 0.2s, box-shadow 0.2s;
+            z-index: 10; /* Pastikan di atas konten */
+        }
+
+        #back-button:hover {
+            background-color: #0b5ed7; /* Warna lebih gelap saat hover */
+            transform: translateY(-2px); /* Efek sedikit terangkat */
+            box-shadow: 0 6px 12px rgba(0,0,0,0.25);
+        }
+
+        body.dark-mode #back-button {
+            background-color: #3f51b5; /* Warna berbeda di dark mode */
+            box-shadow: 0 4px 8px rgba(255,255,255,0.1);
+        }
+        body.dark-mode #back-button:hover {
+            background-color: #303f9f;
+            box-shadow: 0 6px 12px rgba(255,255,255,0.15);
+        }
+
+
         /* Penyesuaian responsif untuk ukuran layar kecil */
         .row.row-cols-4 > .col {
             flex: 0 0 auto;
@@ -170,6 +209,14 @@
             .row.g-4 {
                 --bs-gutter-x: 0.5rem; /* Kurangi jarak horizontal antar kolom */
                 --bs-gutter-y: 0.5rem; /* Kurangi jarak vertikal antar baris */
+            }
+
+            #back-button {
+                width: 40px; /* Sedikit lebih kecil di mobile */
+                height: 40px;
+                font-size: 1.2rem;
+                bottom: 15px;
+                left: 15px;
             }
         }
 
@@ -236,6 +283,7 @@
         <div id="main-content-area">
             <div class="row row-cols-4 g-4" id="menu-grid">
                 </div>
+            <button id="back-button" class="d-none"><i class="bi bi-arrow-left"></i></button>
         </div>
     </div>
 
@@ -264,7 +312,9 @@
             const liveToast = document.getElementById('liveToast');
             const toastMessage = document.getElementById('toast-message');
             const toastBootstrap = bootstrap.Toast.getOrCreateInstance(liveToast);
+            const backButton = document.getElementById('back-button'); // Ambil tombol kembali
 
+            let currentViewIsGrid = true; // Variabel untuk melacak tampilan saat ini
 
             const appMenuItems = [
                 { id: 'telepon', title: 'Telepon', icon: 'bi-telephone-fill', link: '#', content: '<h3>Halaman Telepon</h3><p>Ini adalah dialer telepon.</p><p>Nomor: +62 812-3456-7890</p>' },
@@ -298,6 +348,8 @@
                 navbarTitle.textContent = "Home";
                 mainContentArea.innerHTML = ''; // Hapus konten sebelumnya
                 mainContentArea.appendChild(menuGrid); // Tambahkan kembali grid
+                backButton.classList.add('d-none'); // Sembunyikan tombol kembali
+                currentViewIsGrid = true;
                 renderAppIcons();
             }
 
@@ -346,6 +398,8 @@
                 if (selectedItem) {
                     navbarTitle.textContent = selectedItem.title; // Update judul navbar
                     mainContentArea.innerHTML = selectedItem.content; // Tampilkan konten
+                    backButton.classList.remove('d-none'); // Tampilkan tombol kembali
+                    currentViewIsGrid = false;
 
                     // Perbarui waktu jika halaman jam yang dimuat
                     if (id === 'jam') {
@@ -355,6 +409,8 @@
                 } else {
                     navbarTitle.textContent = "Halaman Tidak Ditemukan";
                     mainContentArea.innerHTML = "<h3>Halaman tidak ditemukan.</h3><p>Silakan pilih menu lain.</p>";
+                    backButton.classList.remove('d-none'); // Tampilkan tombol kembali meskipun error
+                    currentViewIsGrid = false;
                 }
             }
 
@@ -363,7 +419,7 @@
                 const currentTimeElement = document.getElementById('current-time');
                 if (currentTimeElement) {
                     const now = new Date();
-                    currentTimeElement.textContent = now.toLocaleTimeString();
+                    currentTimeElement.textContent = now.toLocaleTimeString('id-ID', {hour: '2-digit', minute:'2-digit', second:'2-digit'}); // Format waktu Indonesia
                 }
             }
 
@@ -387,10 +443,14 @@
                         showToast("Anda telah keluar.");
                         navbarTitle.textContent = "Keluar";
                         mainContentArea.innerHTML = "<h3>Anda telah berhasil keluar.</h3><p>Terima kasih telah menggunakan aplikasi kami.</p>";
+                        backButton.classList.remove('d-none'); // Tampilkan tombol kembali
+                        currentViewIsGrid = false;
                     } else {
                         // Untuk menu lain di offcanvas, muat konten placeholder
                         navbarTitle.textContent = this.textContent.trim(); // Gunakan teks link sebagai judul
                         mainContentArea.innerHTML = `<h3>Halaman ${this.textContent.trim()}</h3><p>Ini adalah konten untuk ${this.textContent.trim()}.</p>`;
+                        backButton.classList.remove('d-none'); // Tampilkan tombol kembali
+                        currentViewIsGrid = false;
                     }
                 });
             });
@@ -406,6 +466,11 @@
                 }
             });
 
+            // Event listener untuk tombol kembali
+            backButton.addEventListener('click', function() {
+                loadAppGrid(); // Kembali ke grid aplikasi
+            });
+
             // Cek preferensi tema dari Local Storage saat memuat halaman
             const savedTheme = localStorage.getItem('theme');
             if (savedTheme === 'dark') {
@@ -417,7 +482,7 @@
             }
 
             // Render ikon aplikasi saat halaman pertama kali dimuat
-            renderAppIcons();
+            loadAppGrid(); // Pastikan grid aplikasi dimuat sebagai tampilan awal
         });
     </script>
 </body>
