--- a/12.android_kw/android_kw.html
+++ b/12.android_kw/android_kw.html
@@ -345,7 +345,7 @@
 
             // Fungsi untuk memuat grid aplikasi
             function loadAppGrid() {
-                navbarTitle.textContent = "Home";
+                navbarTitle.textContent = "Williyanto Adi";
                 mainContentArea.innerHTML = ''; // Hapus konten sebelumnya
                 mainContentArea.appendChild(menuGrid); // Tambahkan kembali grid
                 mainContentArea.appendChild(backButton); // Pastikan tombol kembali juga ada di area konten
