--- a/12.android_kw/android_kw.html
+++ b/12.android_kw/android_kw.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu Android KW (Tombol Kembali)</title>
+    <title>Menu Android KW (Ikon Warna Solid)</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
@@ -112,7 +112,14 @@
         .menu-card .card-icon {
             font-size: 3rem; /* Ukuran ikon lebih besar */
             margin-bottom: 10px;
+            color: #0d6efd; /* **PENTING: Warna ikon solid primary Bootstrap** */
         }
+
+        /* Dark mode untuk ikon */
+        body.dark-mode .menu-card .card-icon {
+            color: #6a96e6; /* Warna ikon yang sedikit lebih terang di dark mode agar kontras */
+        }
+
 
         .menu-card .card-title {
             font-size: 1.2rem;
@@ -312,9 +319,9 @@
             const liveToast = document.getElementById('liveToast');
             const toastMessage = document.getElementById('toast-message');
             const toastBootstrap = bootstrap.Toast.getOrCreateInstance(liveToast);
-            const backButton = document.getElementById('back-button'); // Ambil tombol kembali
+            const backButton = document.getElementById('back-button');
 
-            let currentViewIsGrid = true; // Variabel untuk melacak tampilan saat ini
+            let currentViewIsGrid = true;
 
             const appMenuItems = [
                 { id: 'telepon', title: 'Telepon', icon: 'bi-telephone-fill', link: '#', content: '<h3>Halaman Telepon</h3><p>Ini adalah dialer telepon.</p><p>Nomor: +62 812-3456-7890</p>' },
@@ -335,7 +342,8 @@
             ];
 
             // Palet warna Bootstrap yang akan digunakan
-            const colors = ['text-primary', 'text-success', 'text-info', 'text-warning', 'text-danger', 'text-dark'];
+            // const colors = ['text-primary', 'text-success', 'text-info', 'text-warning', 'text-danger', 'text-dark']; // Dihapus, tidak lagi digunakan
+
 
             // Fungsi untuk menampilkan Toast
             function showToast(message) {
@@ -345,9 +353,9 @@
 
             // Fungsi untuk memuat grid aplikasi
             function loadAppGrid() {
-                navbarTitle.textContent = "Williyanto Adi";
-                mainContentArea.innerHTML = ''; // Hapus konten sebelumnya
-                mainContentArea.appendChild(menuGrid); // Tambahkan kembali grid
+                navbarTitle.textContent = "Home";
+                mainContentArea.innerHTML = '';
+                mainContentArea.appendChild(menuGrid);
                 mainContentArea.appendChild(backButton); // Pastikan tombol kembali juga ada di area konten
                 backButton.classList.add('d-none'); // Sembunyikan tombol kembali
                 currentViewIsGrid = true;
@@ -356,7 +364,7 @@
 
             // Fungsi untuk merender ikon aplikasi
             function renderAppIcons() {
-                menuGrid.innerHTML = ''; // Pastikan grid kosong sebelum diisi ulang
+                menuGrid.innerHTML = '';
                 appMenuItems.forEach(item => {
                     const colDiv = document.createElement('div');
                     colDiv.className = 'col';
@@ -364,14 +372,14 @@
                     const cardLink = document.createElement('a');
                     cardLink.href = item.link;
                     cardLink.className = 'card menu-card h-100';
-                    cardLink.setAttribute('data-app-id', item.id); // Tambahkan ID untuk identifikasi
+                    cardLink.setAttribute('data-app-id', item.id);
 
                     const cardBody = document.createElement('div');
                     cardBody.className = 'card-body';
 
                     const icon = document.createElement('i');
-                    const randomColorClass = colors[Math.floor(Math.random() * colors.length)];
-                    icon.className = `bi ${item.icon} card-icon ${randomColorClass}`;
+                    // Tidak lagi menggunakan warna acak, ikon akan mengambil warna dari CSS .menu-card .card-icon
+                    icon.className = `bi ${item.icon} card-icon`;
 
                     const title = document.createElement('h5');
                     title.className = 'card-title';
@@ -383,12 +391,11 @@
                     colDiv.appendChild(cardLink);
                     menuGrid.appendChild(colDiv);
 
-                    // Tambahkan event listener untuk setiap kartu menu
                     cardLink.addEventListener('click', function(event) {
-                        event.preventDefault(); // Mencegah navigasi default
-                        offcanvasNavbar.hide(); // Sembunyikan offcanvas jika terbuka
-                        loadContent(item.id); // Muat konten yang relevan
-                        showToast(`Membuka: ${item.title}`); // Tampilkan notifikasi
+                        event.preventDefault();
+                        offcanvasNavbar.hide();
+                        loadContent(item.id);
+                        showToast(`Membuka: ${item.title}`);
                     });
                 });
             }
@@ -397,20 +404,17 @@
             function loadContent(id) {
                 const selectedItem = appMenuItems.find(item => item.id === id);
                 if (selectedItem) {
-                    navbarTitle.textContent = selectedItem.title; // Update judul navbar
-                    mainContentArea.innerHTML = selectedItem.content; // Tampilkan konten
-                    mainContentArea.appendChild(backButton); // Tambahkan kembali tombol kembali ke area konten
-                    backButton.classList.remove('d-none'); // Tampilkan tombol kembali
+                    navbarTitle.textContent = selectedItem.title;
+                    mainContentArea.innerHTML = selectedItem.content;
+                    mainContentArea.appendChild(backButton);
+                    backButton.classList.remove('d-none');
                     currentViewIsGrid = false;
 
-                    // Perbarui waktu jika halaman jam yang dimuat
                     if (id === 'jam') {
                         updateTime();
-                        // Hentikan interval sebelumnya jika ada, mulai yang baru
                         if (window.jamInterval) clearInterval(window.jamInterval);
-                        window.jamInterval = setInterval(updateTime, 1000); // Perbarui setiap detik
+                        window.jamInterval = setInterval(updateTime, 1000);
                     } else {
-                        // Hentikan interval jika bukan halaman jam
                         if (window.jamInterval) {
                             clearInterval(window.jamInterval);
                             window.jamInterval = null;
@@ -419,10 +423,10 @@
                 } else {
                     navbarTitle.textContent = "Halaman Tidak Ditemukan";
                     mainContentArea.innerHTML = "<h3>Halaman tidak ditemukan.</h3><p>Silakan pilih menu lain.</p>";
-                    mainContentArea.appendChild(backButton); // Tambahkan kembali tombol kembali ke area konten
-                    backButton.classList.remove('d-none'); // Tampilkan tombol kembali meskipun error
+                    mainContentArea.appendChild(backButton);
+                    backButton.classList.remove('d-none');
                     currentViewIsGrid = false;
-                    if (window.jamInterval) { // Pastikan interval jam dihentikan jika pindah ke halaman error
+                    if (window.jamInterval) {
                         clearInterval(window.jamInterval);
                         window.jamInterval = null;
                     }
@@ -434,7 +438,7 @@
                 const currentTimeElement = document.getElementById('current-time');
                 if (currentTimeElement) {
                     const now = new Date();
-                    currentTimeElement.textContent = now.toLocaleTimeString('id-ID', {hour: '2-digit', minute:'2-digit', second:'2-digit'}); // Format waktu Indonesia
+                    currentTimeElement.textContent = now.toLocaleTimeString('id-ID', {hour: '2-digit', minute:'2-digit', second:'2-digit'});
                 }
             }
 
@@ -444,34 +448,31 @@
             // Event listener untuk link di Offcanvas
             document.querySelectorAll('#offcanvasNavbar .nav-link').forEach(link => {
                 link.addEventListener('click', function(event) {
-                    event.preventDefault(); // Mencegah navigasi default
-                    offcanvasNavbar.hide(); // Sembunyikan offcanvas
+                    event.preventDefault();
+                    offcanvasNavbar.hide();
 
-                    // Hapus kelas 'active' dari semua link dan tambahkan ke yang diklik
                     document.querySelectorAll('#offcanvasNavbar .nav-link').forEach(navLink => navLink.classList.remove('active'));
                     this.classList.add('active');
 
                     const menuId = this.getAttribute('data-menu');
                     if (menuId === 'home') {
-                        loadAppGrid(); // Kembali ke grid aplikasi
+                        loadAppGrid();
                     } else if (menuId === 'logout') {
                         showToast("Anda telah keluar.");
                         navbarTitle.textContent = "Keluar";
                         mainContentArea.innerHTML = "<h3>Anda telah berhasil keluar.</h3><p>Terima kasih telah menggunakan aplikasi kami.</p>";
-                        mainContentArea.appendChild(backButton); // Pastikan tombol kembali ada
-                        backButton.classList.remove('d-none'); // Tampilkan tombol kembali
+                        mainContentArea.appendChild(backButton);
+                        backButton.classList.remove('d-none');
                         currentViewIsGrid = false;
                     } else {
-                        // Untuk menu lain di offcanvas, muat konten placeholder
-                        // Temukan item yang sesuai untuk mendapatkan kontennya
                         const selectedItem = appMenuItems.find(item => item.id === menuId);
                         if (selectedItem) {
-                            loadContent(selectedItem.id); // Muat konten dari appMenuItems
+                            loadContent(selectedItem.id);
                         } else {
-                            navbarTitle.textContent = this.textContent.trim(); // Gunakan teks link sebagai judul
+                            navbarTitle.textContent = this.textContent.trim();
                             mainContentArea.innerHTML = `<h3>Halaman ${this.textContent.trim()}</h3><p>Ini adalah konten untuk ${this.textContent.trim()}.</p>`;
-                            mainContentArea.appendChild(backButton); // Pastikan tombol kembali ada
-                            backButton.classList.remove('d-none'); // Tampilkan tombol kembali
+                            mainContentArea.appendChild(backButton);
+                            backButton.classList.remove('d-none');
                             currentViewIsGrid = false;
                         }
                     }
@@ -482,16 +483,16 @@
             darkModeToggle.addEventListener('change', function() {
                 if (this.checked) {
                     document.body.classList.add('dark-mode');
-                    localStorage.setItem('theme', 'dark'); // Simpan preferensi
+                    localStorage.setItem('theme', 'dark');
                 } else {
                     document.body.classList.remove('dark-mode');
-                    localStorage.setItem('theme', 'light'); // Simpan preferensi
+                    localStorage.setItem('theme', 'light');
                 }
             });
 
             // Event listener untuk tombol kembali
             backButton.addEventListener('click', function() {
-                loadAppGrid(); // Kembali ke grid aplikasi
+                loadAppGrid();
             });
 
             // Cek preferensi tema dari Local Storage saat memuat halaman
@@ -504,8 +505,7 @@
                 darkModeToggle.checked = false;
             }
 
-            // Render ikon aplikasi saat halaman pertama kali dimuat
-            loadAppGrid(); // Pastikan grid aplikasi dimuat sebagai tampilan awal
+            loadAppGrid();
         });
     </script>
 </body>
