--- a/12.android_kw/android_kw.html
+++ b/12.android_kw/android_kw.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu Android KW (Ikon Warna Solid)</title>
+    <title>Menu Android KW (Fungsi Kamera)</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
@@ -112,7 +112,7 @@
         .menu-card .card-icon {
             font-size: 3rem; /* Ukuran ikon lebih besar */
             margin-bottom: 10px;
-            color: #0d6efd; /* **PENTING: Warna ikon solid primary Bootstrap** */
+            color: #0d6efd; /* Warna ikon solid primary Bootstrap */
         }
 
         /* Dark mode untuk ikon */
@@ -242,6 +242,21 @@
                 --bs-gutter-y: 1.5rem; /* Jarak normal */
             }
         }
+
+        /* Styling untuk video kamera */
+        #camera-preview {
+            width: 100%;
+            max-width: 600px; /* Batasi lebar maksimum */
+            height: auto;
+            background-color: #333; /* Latar belakang gelap jika kamera belum aktif */
+            display: block;
+            margin: 0 auto 15px auto; /* Pusatkan video */
+            border-radius: 8px;
+        }
+        .camera-controls {
+            text-align: center;
+            margin-top: 15px;
+        }
     </style>
 </head>
 <body>
@@ -322,11 +337,22 @@
             const backButton = document.getElementById('back-button');
 
             let currentViewIsGrid = true;
+            let currentStream; // Untuk menyimpan stream kamera yang aktif
 
             const appMenuItems = [
                 { id: 'telepon', title: 'Telepon', icon: 'bi-telephone-fill', link: '#', content: '<h3>Halaman Telepon</h3><p>Ini adalah dialer telepon.</p><p>Nomor: +62 812-3456-7890</p>' },
                 { id: 'pesan', title: 'Pesan', icon: 'bi-chat-dots-fill', link: '#', content: '<h3>Halaman Pesan</h3><p>Daftar percakapan Anda.</p><ul><li>John Doe: Hai!</li><li>Jane Smith: Apa kabar?</li></ul>' },
-                { id: 'kamera', title: 'Kamera', icon: 'bi-camera-fill', link: '#', content: '<h3>Halaman Kamera</h3><p>Akses kamera Anda.</p><img src="https://via.placeholder.com/200x150?text=Camera+Preview" class="img-fluid mt-3" alt="Kamera">' },
+                // Konten kamera diubah untuk menyertakan video dan tombol
+                { id: 'kamera', title: 'Kamera', icon: 'bi-camera-fill', link: '#', content: `
+                    <h3>Halaman Kamera</h3>
+                    <p>Izinkan akses kamera untuk melihat pratinjau.</p>
+                    <video id="camera-preview" autoplay playsinline></video>
+                    <div class="camera-controls">
+                        <button id="start-camera-btn" class="btn btn-primary me-2"><i class="bi bi-camera-video-fill"></i> Mulai Kamera</button>
+                        <button id="switch-camera-btn" class="btn btn-secondary" disabled><i class="bi bi-arrow-repeat"></i> Ganti Kamera</button>
+                        <button id="stop-camera-btn" class="btn btn-danger mt-2" disabled><i class="bi bi-camera-video-off-fill"></i> Hentikan Kamera</button>
+                    </div>
+                `},
                 { id: 'galeri', title: 'Galeri', icon: 'bi-image-fill', link: '#', content: '<h3>Halaman Galeri</h3><p>Koleksi foto Anda.</p><div class="row row-cols-2 g-2 mt-2"><img src="https://via.placeholder.com/100x100?text=Foto+1" class="img-fluid col" alt="Foto 1"><img src="https://via.placeholder.com/100x100?text=Foto+2" class="img-fluid col" alt="Foto 2"><img src="https://via.placeholder.com/100x100?text=Foto+3" class="img-fluid col" alt="Foto 3"></div>' },
                 { id: 'musik', title: 'Musik', icon: 'bi-music-note-beamed', link: '#', content: '<h3>Halaman Musik</h3><p>Mainkan lagu favorit Anda.</p><p>Sedang diputar: Lagu Contoh - Artis X</p>' },
                 { id: 'browser', title: 'Browser', icon: 'bi-globe', link: '#', content: '<h3>Halaman Browser</h3><p>Berselancar di internet.</p><p>Kunjungi <a href="https://www.google.com" target="_blank">Google.com</a></p>' },
@@ -341,9 +367,6 @@
                 { id: 'downloads', title: 'Unduhan', icon: 'bi-download', link: '#', content: '<h3>Halaman Unduhan</h3><p>Daftar file yang Anda unduh.</p><ul><li>Laporan_2024.docx</li><li>Gambar_Kucing.png</li></ul>' },
             ];
 
-            // Palet warna Bootstrap yang akan digunakan
-            // const colors = ['text-primary', 'text-success', 'text-info', 'text-warning', 'text-danger', 'text-dark']; // Dihapus, tidak lagi digunakan
-
 
             // Fungsi untuk menampilkan Toast
             function showToast(message) {
@@ -351,15 +374,66 @@
                 toastBootstrap.show();
             }
 
+            // Fungsi untuk menghentikan stream kamera
+            function stopCamera() {
+                if (currentStream) {
+                    currentStream.getTracks().forEach(track => track.stop());
+                    currentStream = null;
+                    const video = document.getElementById('camera-preview');
+                    if (video) video.srcObject = null; // Hapus stream dari video
+                }
+            }
+
+            // Fungsi untuk memulai kamera
+            async function startCamera(facingMode = 'user') { // 'user' untuk depan, 'environment' untuk belakang
+                stopCamera(); // Hentikan kamera sebelumnya jika ada
+
+                const video = document.getElementById('camera-preview');
+                const startBtn = document.getElementById('start-camera-btn');
+                const switchBtn = document.getElementById('switch-camera-btn');
+                const stopBtn = document.getElementById('stop-camera-btn');
+
+                if (!video || !startBtn || !switchBtn || !stopBtn) {
+                    console.error("Elemen kamera tidak ditemukan.");
+                    return;
+                }
+
+                try {
+                    const constraints = { video: { facingMode: facingMode } };
+                    currentStream = await navigator.mediaDevices.getUserMedia(constraints);
+                    video.srcObject = currentStream;
+                    video.play();
+                    startBtn.disabled = true;
+                    stopBtn.disabled = false;
+
+                    // Periksa apakah ada lebih dari satu kamera untuk mengaktifkan tombol switch
+                    const devices = await navigator.mediaDevices.enumerateDevices();
+                    const videoInputDevices = devices.filter(device => device.kind === 'videoinput');
+                    if (videoInputDevices.length > 1) {
+                        switchBtn.disabled = false;
+                    } else {
+                        switchBtn.disabled = true;
+                    }
+
+                } catch (err) {
+                    console.error("Error mengakses kamera:", err);
+                    showToast(`Gagal mengakses kamera: ${err.message}. Pastikan Anda memberi izin.`);
+                    startBtn.disabled = false;
+                    switchBtn.disabled = true;
+                    stopBtn.disabled = true;
+                }
+            }
+
             // Fungsi untuk memuat grid aplikasi
             function loadAppGrid() {
                 navbarTitle.textContent = "Home";
                 mainContentArea.innerHTML = '';
                 mainContentArea.appendChild(menuGrid);
-                mainContentArea.appendChild(backButton); // Pastikan tombol kembali juga ada di area konten
-                backButton.classList.add('d-none'); // Sembunyikan tombol kembali
+                mainContentArea.appendChild(backButton);
+                backButton.classList.add('d-none');
                 currentViewIsGrid = true;
                 renderAppIcons();
+                stopCamera(); // Pastikan kamera berhenti saat keluar dari halaman kamera
             }
 
             // Fungsi untuk merender ikon aplikasi
@@ -378,8 +452,7 @@
                     cardBody.className = 'card-body';
 
                     const icon = document.createElement('i');
-                    // Tidak lagi menggunakan warna acak, ikon akan mengambil warna dari CSS .menu-card .card-icon
-                    icon.className = `bi ${item.icon} card-icon`;
+                    icon.className = `bi ${item.icon} card-icon`; // Warna solid
 
                     const title = document.createElement('h5');
                     title.className = 'card-title';
@@ -410,6 +483,7 @@
                     backButton.classList.remove('d-none');
                     currentViewIsGrid = false;
 
+                    // Logika khusus untuk halaman Jam
                     if (id === 'jam') {
                         updateTime();
                         if (window.jamInterval) clearInterval(window.jamInterval);
@@ -420,12 +494,41 @@
                             window.jamInterval = null;
                         }
                     }
+
+                    // Logika khusus untuk halaman Kamera
+                    if (id === 'kamera') {
+                        // Tambahkan event listener setelah konten kamera dimuat
+                        setTimeout(() => { // Menggunakan setTimeout untuk memastikan elemen sudah ada di DOM
+                            const startBtn = document.getElementById('start-camera-btn');
+                            const switchBtn = document.getElementById('switch-camera-btn');
+                            const stopBtn = document.getElementById('stop-camera-btn');
+
+                            if (startBtn) {
+                                startBtn.addEventListener('click', () => startCamera('environment')); // Default kamera belakang
+                            }
+                            if (switchBtn) {
+                                let isFrontCamera = false;
+                                switchBtn.addEventListener('click', () => {
+                                    isFrontCamera = !isFrontCamera;
+                                    startCamera(isFrontCamera ? 'user' : 'environment');
+                                });
+                            }
+                            if (stopBtn) {
+                                stopBtn.addEventListener('click', stopCamera);
+                            }
+                        }, 100); // Penundaan kecil untuk memastikan DOM diperbarui
+                    } else {
+                        // Hentikan kamera jika pindah dari halaman kamera
+                        stopCamera();
+                    }
+
                 } else {
                     navbarTitle.textContent = "Halaman Tidak Ditemukan";
                     mainContentArea.innerHTML = "<h3>Halaman tidak ditemukan.</h3><p>Silakan pilih menu lain.</p>";
                     mainContentArea.appendChild(backButton);
                     backButton.classList.remove('d-none');
                     currentViewIsGrid = false;
+                    stopCamera(); // Hentikan kamera jika pindah ke halaman error
                     if (window.jamInterval) {
                         clearInterval(window.jamInterval);
                         window.jamInterval = null;
@@ -443,7 +546,7 @@
             }
 
 
-            // --- Event Listeners ---
+            // --- Event Listeners Global ---
 
             // Event listener untuk link di Offcanvas
             document.querySelectorAll('#offcanvasNavbar .nav-link').forEach(link => {
@@ -464,6 +567,7 @@
                         mainContentArea.appendChild(backButton);
                         backButton.classList.remove('d-none');
                         currentViewIsGrid = false;
+                        stopCamera(); // Pastikan kamera berhenti jika logout
                     } else {
                         const selectedItem = appMenuItems.find(item => item.id === menuId);
                         if (selectedItem) {
@@ -474,6 +578,7 @@
                             mainContentArea.appendChild(backButton);
                             backButton.classList.remove('d-none');
                             currentViewIsGrid = false;
+                            stopCamera(); // Pastikan kamera berhenti jika ke halaman lain dari offcanvas
                         }
                     }
                 });
@@ -505,7 +610,7 @@
                 darkModeToggle.checked = false;
             }
 
-            loadAppGrid();
+            loadAppGrid(); // Inisialisasi awal
         });
     </script>
 </body>
