--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
         </div>
 
         <div class="col-6 col-md-6 col-lg-3">
-          <a href="./404.html" class="btn btn-info btn-project">
-            <i class="fas fa-paper-plane"></i> Proyek 13
+          <a href="./6.yusup/chots1.html" class="btn btn-info btn-project">
+            <i class="fas fa-paper-plane"></i> Chots
           </a>
         </div>
 
