--- a/6.yusup/chots1.html
+++ b/6.yusup/chots1.html
@@ -404,10 +404,10 @@
             // =================================================================
             // === KONFIGURASI REPOSITORI GITHUB (WAJIB DIUBAH) ===
             // =================================================================
-            const GITHUB_USERNAME = 'Willyanto-Adi-2025';
-            const GITHUB_REPO = 'offline-video-player-youtube-short';
+            const GITHUB_USERNAME = 'williyanto';
+            const GITHUB_REPO = 'chots1';
             const GITHUB_BRANCH = 'main';
-            const GITHUB_VIDEO_PATH = 'videos'; // Folder di dalam repo yang berisi video
+            const GITHUB_VIDEO_PATH = 'vdeo'; // Folder di dalam repo yang berisi video
             // =================================================================
 
 
