--- a/6.yusup/chots1.html
+++ b/6.yusup/chots1.html
@@ -405,7 +405,7 @@
             // === KONFIGURASI REPOSITORI GITHUB (WAJIB DIUBAH) ===
             // =================================================================
             const GITHUB_USERNAME = 'williyanto';
-            const GITHUB_REPO = 'chots1';
+            const GITHUB_REPO = 'mypro'; // Ganti dengan nama repositori Anda
             const GITHUB_BRANCH = 'main';
             const GITHUB_VIDEO_PATH = 'vdeo'; // Folder di dalam repo yang berisi video
             // =================================================================
