--- a/6.yusup/chots1.html
+++ b/6.yusup/chots1.html
@@ -407,7 +407,7 @@
             const GITHUB_USERNAME = 'williyanto';
             const GITHUB_REPO = 'mypro'; // Ganti dengan nama repositori Anda
             const GITHUB_BRANCH = 'main';
-            const GITHUB_VIDEO_PATH = 'vdeo'; // Folder di dalam repo yang berisi video
+            const GITHUB_VIDEO_PATH = 'video'; // Folder di dalam repo yang berisi video
             // =================================================================
 
 
