--- a/6.yusup/chots1.html
+++ b/6.yusup/chots1.html
@@ -88,11 +88,11 @@
     <div class="fixed-bottom-container">
         <div class="main-content-row">
             <div class="profile-section">
-                <img src="icons/profile.png" id="profile-icon-element" class="icon-png rounded-circle">
+                <img src="..//6.yusup/icon_black/user.png" id="profile-icon-element" class="icon-png rounded-circle">
                 <div id="username-element" class="username">@username</div>
             </div>
             <button class="btn btn-danger btn-sm subscribe-btn" id="subscribe-button">
-                <img src="icons/subscribe.png" id="subscribe-icon" class="icon-png">
+                <img src="..//6.yusup/icon_black/new video.png" id="subscribe-icon" class="icon-png">
                 <span id="subscribe-text">Subscribe</span>
             </button>
         </div>
@@ -101,23 +101,23 @@
 
     <nav class="right-nav">
         <a class="nav-link" href="#" id="like-button">
-            <img src="icons/like.png" id="like-icon" class="icon-png">
+            <img src="..//6.yusup/icon_white/like.png" id="like-icon" class="icon-png">
             <span>Like</span>
         </a>
         <a class="nav-link" href="#" id="dislike-button">
-            <img src="icons/dislike.png" id="dislike-icon" class="icon-png">
+            <img src="..//6.yusup/icon_white/dislike.png" id="dislike-icon" class="icon-png">
             <span>Dislike</span>
         </a>
         <a class="nav-link" href="#" id="comment-button">
-            <img src="icons/comment.png" class="icon-png">
+            <img src="..//6.yusup/icon_white/comment.png" class="icon-png">
             <span>Comment</span>
         </a>
         <a class="nav-link" href="#">
-            <img src="icons/share.png" class="icon-png">
+            <img src="..//6.yusup/icon_white/share.png" class="icon-png">
             <span>Share</span>
         </a>
         <a class="nav-link" href="#">
-            <img src="icons/repeat.png" class="icon-png">
+            <img src="..//6.yusup/icon_white/repeat.png" class="icon-png">
             <span>Repeat</span>
         </a>
     </nav>
@@ -125,22 +125,22 @@
     <nav class="navbar fixed-bottom bottom-nav">
         <div class="container-fluid d-flex justify-content-around">
             <a class="nav-link active refresh-trigger" href="#">
-                <img src="icons/home.png" class="icon-png">
+                <img src="..//6.yusup/icon_black/beranda.png" class="icon-png">
                 <span>Beranda</span>
             </a>
             <a class="nav-link refresh-trigger" href="#">
-                <img src="icons/shorts.png" class="icon-png">
+                <img src="..//6.yusup/icon_black/shorts.png" class="icon-png">
                 <span>Chots</span>
             </a>
             <a class="nav-link plus-icon" href="#" id="reload-button">
-                <img src="icons/reload.png" class="icon-png">
+                <img src="..//6.yusup/icon_black/plus.png" class="icon-png">
             </a>
             <a class="nav-link refresh-trigger" href="#">
-                <img src="icons/subscribed.png" class="icon-png">
+                <img src="..//6.yusup/icon_black/new video.png" class="icon-png">
                 <span>Subrek</span>
             </a>
             <a class="nav-link" href="#" id="profile-button">
-                <img src="icons/profile.png" class="icon-png">
+                <img src="..//6.yusup/icon_black/user.png" class="icon-png">
                 <span>Kamu</span>
             </a>
         </div>
