--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
         </div>
 
         <div class="col-6 col-md-6 col-lg-3">
-          <a href="./404.html" class="btn btn-warning btn-project">
-            <i class="fas fa-lightbulb"></i> Proyek 14
+          <a href="./13. generator_angka/generator_angka.html" class="btn btn-warning btn-project">
+            <i class="fas fa-lightbulb"></i> Generator Angka
           </a>
         </div>
 
