--- a/13. generator_angka/generator_angka.html
+++ b/13. generator_angka/generator_angka.html
@@ -63,20 +63,19 @@
       }
       .stat-card {
         background-color: #f8f9fa;
-        padding: 1rem; /* Padding dikecilkan */
+        padding: 1rem;
         border-radius: 10px;
         text-align: center;
         height: 100%;
       }
       .stat-card .stat-title {
-        font-size: 0.85rem; /* Judul juga sedikit dikecilkan */
+        font-size: 0.9rem; 
         font-weight: 500;
         color: #6c757d;
         margin-bottom: 0.5rem;
       }
-      /* DIUBAH FINAL: Ukuran font nilai hasil dikecilkan maksimal */
       .stat-card .stat-value {
-        font-size: 1.25rem; /* Diubah dari 1.5rem */
+        font-size: 1.25rem;
         font-weight: 600;
         color: #0d6efd;
       }
@@ -130,18 +129,21 @@
                   </div>
                   <div class="col-6">
                     <div class="stat-card">
-                      <div class="stat-title">RATA-RATA</div>
-                      <div class="stat-value" id="hasilRataRata">-</div>
-                    </div>
-                  </div>
-                  <div class="col-6">
-                    <div class="stat-card">
                       <div class="stat-title">NILAI TERBESAR</div>
                       <div class="stat-value" id="hasilMax">-</div>
                     </div>
                   </div>
                 </div>
-            </div>
+
+                <div class="row mt-3 g-3 justify-content-center">
+                  <div class="col-6">
+                    <div class="stat-card">
+                      <div class="stat-title">RATA-RATA</div>
+                      <div class="stat-value" id="hasilRataRata">-</div>
+                    </div>
+                  </div>
+                </div>
+                </div>
           </div>
         </div>
       </div>
