--- a/13. generator_angka/generator_angka.html
+++ b/13. generator_angka/generator_angka.html
@@ -69,8 +69,8 @@
               <div class="row g-3">
                 <div class="col-6"><label for="nilaiTerkecil" class="form-label">Batas Bawah</label><input type="text" class="form-control" id="nilaiTerkecil" placeholder="Contoh: 1"></div>
                 <div class="col-6"><label for="nilaiTerbesar" class="form-label">Batas Atas</label><input type="text" class="form-control" id="nilaiTerbesar" placeholder="Contoh: 100"></div>
-                <div class="col-6"><label for="banyaknya" class="form-label">Jumlah</label><input type="number" class="form-control" id="banyaknya" placeholder="Contoh: 50"></div>
-                <div class="col-6"><label for="jumlahDigit" class="form-label">Digit Desimal</label><input type="number" class="form-control" id="jumlahDigit" placeholder="Contoh: 3"></div>
+                <div class="col-6"><label for="banyaknya" class="form-label">Jumlah</label><input type="text" class="form-control" id="banyaknya" placeholder="Contoh: 50"></div>
+                <div class="col-6"><label for="jumlahDigit" class="form-label">Digit Desimal</label><input type="text" class="form-control" id="jumlahDigit" placeholder="Contoh: 3"></div>
               </div>
               
               <div class="row g-2 mt-4">
@@ -129,6 +129,35 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script>
       let generatedNumbers = [];
+
+      // --- BAGIAN BARU: Fungsi dan event listener untuk validasi input ---
+
+      // Fungsi ini menghapus semua karakter kecuali angka dan satu titik desimal
+      function validateDecimal(event) {
+          const input = event.target;
+          // Ganti semua karakter non-digit/non-titik dengan string kosong
+          let value = input.value.replace(/[^\d.]/g, '');
+          // Pastikan hanya ada satu titik desimal
+          const parts = value.split('.');
+          if (parts.length > 2) {
+              value = parts[0] + '.' + parts.slice(1).join('');
+          }
+          input.value = value;
+      }
+
+      // Fungsi ini menghapus semua karakter kecuali angka (untuk integer)
+      function validateInteger(event) {
+          const input = event.target;
+          input.value = input.value.replace(/[^\d]/g, '');
+      }
+
+      // Terapkan listener ke setiap kolom input
+      document.getElementById('nilaiTerkecil').addEventListener('input', validateDecimal);
+      document.getElementById('nilaiTerbesar').addEventListener('input', validateDecimal);
+      document.getElementById('banyaknya').addEventListener('input', validateInteger);
+      document.getElementById('jumlahDigit').addEventListener('input', validateInteger);
+
+      // --- AKHIR BAGIAN BARU ---
 
       function copyToClipboard(text) {
         if (navigator.clipboard && window.isSecureContext) {
@@ -219,7 +248,6 @@
       });
       
       document.getElementById('tombolReset').addEventListener('click', function() {
-        // DIUBAH: Mengosongkan nilai form
         document.getElementById('nilaiTerkecil').value = '';
         document.getElementById('nilaiTerbesar').value = '';
         document.getElementById('banyaknya').value = '';
