--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@
         </div>
 
         <div class="col-6 col-md-6 col-lg-3">
-          <a href="./404.html" class="btn btn-danger btn-project">
-            <i class="fas fa-graduation-cap"></i> Proyek 15
+          <a href="./14. CR_Trial/cr_trial.html" class="btn btn-danger btn-project">
+            <i class="fas fa-graduation-cap"></i> CR Trial
           </a>
         </div>
         
